--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,14 +1,14 @@
 <%- include('./partials/layout/header') %>
 <div class="container">
-    <div class="row">
-        <div class="col-3 d-flex flex-column h-100">
+    <div class="row h-100">
+        <div class="col-3 d-flex flex-column p-3">
             <% if (isLoggedIn) { %>
                 <%- include('./partials/module/sidebar') %>
             <% } else { %>
                 
             <% } %>
         </div>
-        <div class="col-9">
+        <div class="col-9 p-3">
             <%- include(`./screens/${page}`) %>
         </div>
         
