--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <%- include('./partials/layout/header') %>
 <div class="container">
     <div class="row h-100">
-        <div class="col-3 d-flex flex-column p-3">
+        <div class="col-4 d-flex flex-column p-3">
             <% if (isLoggedIn) { %>
             <%- include('./partials/module/logo') %>
             <%- include('./partials/module/sidebar') %>
@@ -12,10 +12,14 @@
             <%- include('./partials/module/register') %>
             <% } %>
         </div>
-        <div class="col-9 p-3">
+        <div class="col-8 p-3">
             <%- include(`./screens/${page}`) %>
         </div>
 
     </div>
 </div>
+<% if(isLoggedIn){ %>
+<%- include('./partials/modal/confirm') %>
+<%- include('./partials/modal/createPost') %>
+<% } %>
 <%- include('./partials/layout/footer') %>
