--- a/views/partials/layout/header.ejs
+++ b/views/partials/layout/header.ejs
@@ -8,6 +8,19 @@
         rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+        @media (min-width: 1400px) {
+
+            .container,
+            .container-lg,
+            .container-md,
+            .container-sm,
+            .container-xl {
+                max-width: 1140px;
+            }
+        }
+    </style>
+    <link href="/public/css/style.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
