--- a/views/partials/module/postCard.ejs
+++ b/views/partials/module/postCard.ejs
@@ -1,6 +1,7 @@
-<div class="card post">
+<div class="card post mb-3">
     <div class="card-header post-header">
-        <img class="img-fluid card-img post-creator-img" src="/public/avatar/avatar_1.png" alt="John Doe" />
+        <img class="img-fluid card-img post-creator-img" src="/public/avatar/avatar_<%=post.creatorImage%>.png"
+            alt="John Doe" />
         <a class="mx-3" href="/user/johndoe">@<%- post.creatorUsername%></a>
         <span class="post-created-date ms-auto"><%- post.createdAt %></span>
         <!-- follow feature v2. feature -->
@@ -31,28 +32,3 @@
 
 </script>
 <% } %>
-<style>
-    .post-creator-img {
-        width: 45px;
-        height: 45px;
-    }
-
-    .post-footer .btn {
-        width: 40px;
-        height: 40px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .post-footer .fa {
-        font-size: 1.25rem;
-    }
-
-    .post-footer,
-    .post-header {
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-    }
-</style>
