add gdpr screen

--- a/views/partials/module/register.ejs
+++ b/views/partials/module/register.ejs
@@ -20,7 +20,7 @@
             </div>
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="gdpr">
-                <label class="form-check-label" for="gdpr">Gdpr checkbox</label>
+                <label class="form-check-label" for="gdpr">Agree to <a href="/gdpr">Terms and Conditions</a></label>
             </div>
             <div class="d-flex align-items-center justify-content-end">
                 <button type="submit" class="btn btn-primary">Register</button>
