--- a/views/screens/gdpr.ejs
+++ b/views/screens/gdpr.ejs
@@ -1,1 +1,54 @@
-GDPR
+<div class="card p-3 mb-3">
+    <h1 class="page-head-title">Gdpr screen</h1>
+</div>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+    aliqua. Molestie at elementum eu facilisis sed odio morbi. Fermentum dui faucibus in ornare quam viverra orci
+    sagittis.
+    Id faucibus nisl tincidunt eget. Egestas erat imperdiet sed euismod nisi. Morbi tristique senectus et netus et. Id
+    consectetur purus ut faucibus. Morbi quis commodo odio aenean sed adipiscing. Volutpat odio facilisis mauris sit.
+    Proin
+    sed libero enim sed faucibus turpis in eu mi. At tellus at urna condimentum mattis pellentesque. Enim tortor at
+    auctor
+    urna. Pulvinar mattis nunc sed blandit libero. Arcu dictum varius duis at consectetur lorem. Bibendum est ultricies
+    integer quis auctor elit. Hendrerit dolor magna eget est lorem. Quis viverra nibh cras pulvinar mattis nunc sed
+    blandit
+    libero.</p>
+
+<p>Fames ac turpis egestas sed. Viverra mauris in aliquam sem fringilla. Sed felis eget velit aliquet sagittis id
+    consectetur purus ut. Orci phasellus egestas tellus rutrum tellus pellentesque eu tincidunt. Pharetra massa massa
+    ultricies mi quis. Magna fringilla urna porttitor rhoncus dolor purus. Tortor id aliquet lectus proin. Mollis
+    aliquam ut
+    porttitor leo a diam sollicitudin tempor id. Senectus et netus et malesuada. Massa sapien faucibus et molestie ac
+    feugiat sed. Magna fringilla urna porttitor rhoncus dolor purus non. Maecenas accumsan lacus vel facilisis volutpat
+    est
+    velit egestas. Ac turpis egestas sed tempus urna et pharetra pharetra. Dignissim sodales ut eu sem integer vitae.
+</p>
+
+<p>Volutpat maecenas volutpat blandit aliquam etiam erat. Id cursus metus aliquam eleifend mi in. Amet consectetur
+    adipiscing elit pellentesque habitant morbi tristique. Egestas dui id ornare arcu odio ut sem. Lobortis feugiat
+    vivamus
+    at augue eget arcu. Non curabitur gravida arcu ac. Ullamcorper malesuada proin libero nunc consequat interdum varius
+    sit. Faucibus nisl tincidunt eget nullam non. Convallis convallis tellus id interdum. Sit amet volutpat consequat
+    mauris
+    nunc congue nisi. Tellus mauris a diam maecenas. Non blandit massa enim nec dui nunc mattis. Quis lectus nulla at
+    volutpat. Morbi quis commodo odio aenean sed adipiscing diam donec. Leo integer malesuada nunc vel risus commodo
+    viverra
+    maecenas. Mauris commodo quis imperdiet massa tincidunt nunc pulvinar.</p>
+
+<p>Eget felis eget nunc lobortis mattis aliquam faucibus purus. Pellentesque elit ullamcorper dignissim cras tincidunt
+    lobortis feugiat. Diam ut venenatis tellus in metus vulputate eu scelerisque. Ante metus dictum at tempor commodo
+    ullamcorper a. Vel facilisis volutpat est velit egestas dui id ornare. Dapibus ultrices in iaculis nunc sed augue.
+    Blandit aliquam etiam erat velit scelerisque in dictum. Malesuada fames ac turpis egestas. Magna eget est lorem
+    ipsum.
+    Senectus et netus et malesuada fames. Gravida rutrum quisque non tellus orci ac auctor augue mauris.</p>
+
+<p>Tempus urna et pharetra pharetra massa massa. Quis blandit turpis cursus in hac habitasse platea. Duis at tellus at
+    urna
+    condimentum mattis pellentesque. Nulla facilisi morbi tempus iaculis. Ut sem nulla pharetra diam. Morbi blandit
+    cursus
+    risus at ultrices mi tempus imperdiet. Feugiat in fermentum posuere urna nec tincidunt. Nunc id cursus metus aliquam
+    eleifend mi in nulla posuere. Velit scelerisque in dictum non consectetur a erat. Cum sociis natoque penatibus et
+    magnis
+    dis. Facilisis mauris sit amet massa vitae. Pulvinar mattis nunc sed blandit libero volutpat sed cras ornare. Est
+    placerat in egestas erat imperdiet sed euismod. Cras fermentum odio eu feugiat pretium nibh.</p>
