--- a/views/partials/layout/footer.ejs
+++ b/views/partials/layout/footer.ejs
@@ -1,2 +1,10 @@
+<script>
+    function countPostLength(event, currentElementID) {
+        var length = event.value.length;
+        var current = document.getElementById(currentElementID);
+        current.innerHTML = length;
+    }
+</script>
 </body>
+
 </html>
