--- a/views/screens/gdpr.ejs
+++ b/views/screens/gdpr.ejs
@@ -1,6 +1,4 @@
-<div class="card p-3 mb-3">
-    <h1 class="page-head-title">Gdpr screen</h1>
-</div>
+<%- include('../partials/module/pageHead', {title: 'Gdpr screen'}) %>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
     aliqua. Molestie at elementum eu facilisis sed odio morbi. Fermentum dui faucibus in ornare quam viverra orci
