--- a/views/screens/lostPassword.ejs
+++ b/views/screens/lostPassword.ejs
@@ -1,1 +1,11 @@
-Lost password
+<%- include('../partials/module/pageHead', {title: 'Lost my password'}) %>
+<form action="/lostPassword">
+    <div class="mb-3">
+        <label for="lost-password-email" class="form-label">Add your email address where we can send the confirmation
+            code.</label>
+        <input type="email" class="form-control" id="lost-password-email" placeholder="name@example.com">
+    </div>
+    <div class="d-flex align-items-center justify-content-end">
+        <button type="submit" class="btn btn-primary">Send</button>
+    </div>
+</form>
