--- a/views/partials/modal/createPost.ejs
+++ b/views/partials/modal/createPost.ejs
@@ -12,7 +12,7 @@
                         <img class="img-fluid card-img post-creator-img" src="/public/avatar/avatar_2.png"
                             alt="John Doe" />
                         <textarea class="form-control" maxlength="160" placeholder="This a tweet..." id="newPost"
-                            onkeyup="countPostLength(this)"></textarea>
+                            onkeyup="countPostLength(this,'current')"></textarea>
                     </div>
                     <div class="d-flex align-items-center justify-content-end">
                         <div id="post-count" class="mt-2">
@@ -28,11 +28,3 @@
         </form>
     </div>
 </div>
-<script>
-    function countPostLength(event) {
-        console.log(event.value)
-        var length = event.value.length;
-        var current = document.getElementById("current");
-        current.innerHTML = length;
-    }
-</script>
