--- a/views/partials/module/login.ejs
+++ b/views/partials/module/login.ejs
@@ -1,6 +1,6 @@
 <div class="card mt-3 login-module">
     <div class="card-body">
-        <h4 class="mb-3">Login to Gabby</h4>
+        <h4 class="mb-3">Login</h4>
         <form method="post" action="/login">
             <div class="mb-3">
                 <label for="email" class="form-label">Email address</label>
