--- a/views/partials/module/register.ejs
+++ b/views/partials/module/register.ejs
@@ -1,7 +1,7 @@
 <div class="card  register-module">
     <div class="card-body">
-        <h4 class="mb-3">Register to Gabby</h4>
-        <form method="post" action="/register">
+        <h4 class="mb-3">Register</h4>
+        <form method="post" action="/register" id="registerForm">
             <div class="mb-3">
                 <label for="email" class="form-label">Email address</label>
                 <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email">
@@ -28,3 +28,6 @@
         </form>
     </div>
 </div>
+<script type="text/javascript">
+
+</script>
