create new password screen

--- a/views/screens/createNewPassword.ejs
+++ b/views/screens/createNewPassword.ejs
@@ -1,1 +1,17 @@
-createNewPassword
+<%- include('../partials/module/pageHead', {title: 'Create new password'}) %>
+<strong class="mb-3">Create new password for j******@*****.**** user</strong>
+
+<form method="post" action="/newPassword">
+    <div class="mb-3">
+        <label for="password" class="form-label">Password</label>
+        <input type="password" class="form-control" id="password" name="password">
+    </div>
+    <div class="mb-3">
+        <label for="password-again" class="form-label">Password again</label>
+        <input type="password" class="form-control" id="password-again" name="passwordAgain">
+    </div>
+    <input type="hidden" name="uniqueHash" value="">
+    <div class="d-flex align-items-center justify-content-end">
+        <button type="submit" class="btn btn-primary">Send</button>
+    </div>
+</form>
