--- a/views/partials/modal/createPost.ejs
+++ b/views/partials/modal/createPost.ejs
@@ -9,7 +9,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="d-flex gap-3">
-                        <img class="img-fluid card-img post-creator-img" src="/public/avatar/avatar_2.png"
+                        <img class="img-fluid card-img post-creator-img user-image" src="/public/avatar/avatar_2.png"
                             alt="John Doe" />
                         <textarea class="form-control" maxlength="160" placeholder="This a tweet..." id="newPost"
                             onkeyup="countPostLength(this,'current')"></textarea>
