--- a/views/partials/module/register.ejs
+++ b/views/partials/module/register.ejs
@@ -4,22 +4,24 @@
         <form method="post" action="/register" id="registerForm">
             <div class="mb-3">
                 <label for="email" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email">
+                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email" required>
             </div>
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" id="username" aria-describedby="UserHelp" name="username">
+                <input type="text" class="form-control" id="username" aria-describedby="UserHelp" name="username"
+                    required>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" name="password">
+                <input type="password" class="form-control" id="password" name="password" minlength="6" required>
             </div>
             <div class="mb-3">
                 <label for="password-again" class="form-label">Password again</label>
-                <input type="password" class="form-control" id="password-again" name="passwordAgain">
+                <input type="password" class="form-control" id="password-again" name="passwordAgain" minlength="6"
+                    required>
             </div>
             <div class="mb-3 form-check">
-                <input type="checkbox" class="form-check-input" id="gdpr">
+                <input type="checkbox" class="form-check-input" id="gdpr" required>
                 <label class="form-check-label" for="gdpr">Agree to <a href="/gdpr">Terms and Conditions</a></label>
             </div>
             <div class="d-flex align-items-center justify-content-end">
