--- a/views/partials/module/sidebar.ejs
+++ b/views/partials/module/sidebar.ejs
@@ -26,10 +26,10 @@
   </li>
 -->
   <li class="nav-item">
-    <a class="nav-link" aria-current="page" href="/logout">
-      <i class="fa fa-sign-out" aria-hidden="true"></i>
-      Logout
-    </a>
+    <form method="post" action="/logout">
+      <button class="nav-link w-100 text-start" type="submit"><i class="fa fa-sign-out" aria-hidden="true"></i>
+        Logout</button>
+    </form>
   </li>
 </ul>
 <div class="d-grid">
