refactoring authUser mw, create isLoggedIn mw, create getLoggedInUser, add profile menu to sidebar, some work on user page

--- a/views/partials/module/sidebar.ejs
+++ b/views/partials/module/sidebar.ejs
@@ -18,13 +18,14 @@
       Following
     </a>
   </li>
+  -->
   <li class="nav-item my-1">
-    <a class="nav-link" aria-current="page" href="/profile">
+    <a class="nav-link" aria-current="page" href="/me">
       <i class="fa fa-user" aria-hidden="true"></i>
       Profile
     </a>
   </li>
--->
+
   <li class="nav-item">
     <form method="post" action="/logout">
       <button class="nav-link w-100 text-start" type="submit"><i class="fa fa-sign-out" aria-hidden="true"></i>
