--- a/views/partials/modal/createPost.ejs
+++ b/views/partials/modal/createPost.ejs
@@ -9,9 +9,10 @@
                 </div>
                 <div class="modal-body">
                     <div class="d-flex gap-3">
-                        <img class="img-fluid card-img post-creator-img" src="/public/avatar/avatar_2.png"
-                            alt="John Doe" />
-                        <textarea class="form-control" maxlength="160" placeholder="This a tweet..." id="newPost"
+                        <img class="img-fluid card-img post-creator-img"
+                            src="/public/avatar/avatar_<%=loggedInUser?.profileImage%>.png" alt="John Doe" />
+                        <textarea class="form-control" name="postContent" minlength="5" maxlength="160"
+                            required="required" placeholder="This a tweet..." id="newPost"
                             onkeyup="countPostLength(this,'current')"></textarea>
                     </div>
                     <div class="d-flex align-items-center justify-content-end">
