--- a/views/screens/user.ejs
+++ b/views/screens/user.ejs
@@ -42,10 +42,10 @@
     </div>
     <% } %>
 </div>
-<% if( userPosts.length){ %>
+<% if( posts.length){ %>
 <div class="user-posts">
-    <% for(var i=0; i < userPosts.length; i++) { %>
-    <%- include('../partials/module/postCard', {post: userPosts[i]}) %>
+    <% for(var i=0; i < posts.length; i++) { %>
+    <%- include('../partials/module/postCard', {post: posts[i]}) %>
     <% } %>
 </div>
 <% } %>
