--- a/views/partials/module/register.ejs
+++ b/views/partials/module/register.ejs
@@ -6,8 +6,9 @@
         <% } %>
         <form method="post" action="/register" id="registerForm">
             <div class="mb-3">
-                <label for="email" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email" required>
+                <label for="register-email" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="register-email" aria-describedby="emailHelp" name="email"
+                    required>
             </div>
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
@@ -15,8 +16,9 @@
                     required>
             </div>
             <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" name="password" minlength="6" required>
+                <label for="register-password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="register-password" name="password" minlength="6"
+                    required>
             </div>
             <div class="mb-3">
                 <label for="password-again" class="form-label">Password again</label>
