--- a/views/partials/module/login.ejs
+++ b/views/partials/module/login.ejs
@@ -6,12 +6,12 @@
         <% } %>
         <form method="post" action="/login">
             <div class="mb-3">
-                <label for="email" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email">
+                <label for="login-email" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="login-email" aria-describedby="emailHelp" name="email">
             </div>
             <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" name="password">
+                <label for="login-password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="login-password" name="password">
             </div>
             <div class="d-flex align-items-center justify-content-end">
                 <button type="submit" class="btn btn-primary">Login</button>
