--- a/views/screens/editPost.ejs
+++ b/views/screens/editPost.ejs
@@ -1,13 +1,14 @@
 <%- include('../partials/module/pageHead', {title: 'Edit post'}) %>
 <form method="post" action="/post/update">
     <div class="d-flex gap-3">
-        <img class="img-fluid card-img post-creator-img" src="/public/avatar/avatar_2.png" alt="John Doe" />
-        <textarea class="form-control" maxlength="160" placeholder="This a tweet..." id="newPost"
-            onkeyup="countPostLength(this,'currentEdit')"></textarea>
+        <img class="img-fluid card-img post-creator-img" src="/public/avatar/avatar_<%=post.creatorImage%>.png"
+            alt="<%=post.creatorUsername%>" />
+        <textarea class="form-control" maxlength="160" minlength="5" placeholder="This a tweet..." id="newPost"
+            onkeyup="countPostLength(this,'currentEdit')"><%=post.content%></textarea>
     </div>
     <div class="d-flex align-items-center justify-content-end mb-3">
         <div id="post-count" class="mt-2">
-            <span id="currentEdit">0</span>
+            <span id="currentEdit"><%=post.content.length%></span>
             <span id="maximum">/ 160</span>
         </div>
     </div>
@@ -15,3 +16,6 @@
         <button type="submit" class="btn btn-primary">Edit</button>
     </div>
 </form>
+<script>
+
+</script>
