rename post id parameter to postId

--- a/views/partials/modal/confirm.ejs
+++ b/views/partials/modal/confirm.ejs
@@ -12,7 +12,7 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 <form method="post" action="/post/delete">
-                    <input type="hidden" name="id" id="postIdToDelete" value="">
+                    <input type="hidden" name="postId" id="postIdToDelete" value="">
                     <button type="submit" class="btn btn-primary">Yes</button>
                 </form>
             </div>
