--- a/views/screens/editPost.ejs
+++ b/views/screens/editPost.ejs
@@ -3,8 +3,8 @@
     <div class="d-flex gap-3">
         <img class="img-fluid card-img post-creator-img" src="/public/avatar/avatar_<%=post.creatorImage%>.png"
             alt="<%=post.creatorUsername%>" />
-        <textarea class="form-control" maxlength="160" minlength="5" placeholder="This a tweet..." id="newPost"
-            onkeyup="countPostLength(this,'currentEdit')"><%=post.content%></textarea>
+        <textarea name="postId" class="form-control" maxlength="160" minlength="5" placeholder="This a tweet..."
+            id="newPost" onkeyup="countPostLength(this,'currentEdit')"><%=post.content%></textarea>
     </div>
     <div class="d-flex align-items-center justify-content-end mb-3">
         <div id="post-count" class="mt-2">
