--- a/views/screens/editPost.ejs
+++ b/views/screens/editPost.ejs
@@ -1,20 +1,24 @@
 <%- include('../partials/module/pageHead', {title: 'Edit post'}) %>
+<% if(messages) {%>
+<%- include('../partials/module/success', {message: messages.successUpdatePost}) %>
+<%}%>
 <form method="post" action="/post/update">
     <div class="d-flex gap-3">
         <img class="img-fluid card-img post-creator-img" src="/public/avatar/avatar_<%=post.creatorImage%>.png"
-            alt="<%=post.creatorUsername%>" />
-        <textarea name="postId" class="form-control" maxlength="160" minlength="5" placeholder="This a tweet..."
-            id="newPost" onkeyup="countPostLength(this,'currentEdit')"><%=post.content%></textarea>
+alt="<%=post.creatorUsername%>" />
+<textarea name="postContent" class="form-control" maxlength="160" minlength="5" placeholder="This a tweet..."
+    id="newPost" onkeyup="countPostLength(this,'currentEdit')"><%=post.content%></textarea>
+<input type="hidden" name="postId" value="<%=post.id%>">
+</div>
+<div class="d-flex align-items-center justify-content-end mb-3">
+    <div id="post-count" class="mt-2">
+        <span id="currentEdit"><%=post.content.length%></span>
+        <span id="maximum">/ 160</span>
     </div>
-    <div class="d-flex align-items-center justify-content-end mb-3">
-        <div id="post-count" class="mt-2">
-            <span id="currentEdit"><%=post.content.length%></span>
-            <span id="maximum">/ 160</span>
-        </div>
-    </div>
-    <div class="d-flex align-items-center justify-content-end">
-        <button type="submit" class="btn btn-primary">Edit</button>
-    </div>
+</div>
+<div class="d-flex align-items-center justify-content-end">
+    <button type="submit" class="btn btn-primary">Edit</button>
+</div>
 </form>
 <script>
 
