--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,3 +97,13 @@
   align-items: flex-end;
   justify-content: flex-start;
 }
+
+@media (min-width: 1400px) {
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl {
+    max-width: 1140px;
+  }
+}
