add follow / unfollow logic on postcard

--- a/views/partials/module/followBtn.ejs
+++ b/views/partials/module/followBtn.ejs
@@ -1,6 +1,6 @@
 <div class="follow-module">
     <form action="/follow" method="post" class="mb-0 ms-3">
         <input type="hidden" name="followId" value="<%=followId%>">
-        <button type="button" class="btn btn-outline-primary btn-sm">Follow</button>
+        <button type="submit" class="btn btn-outline-primary btn-sm">Follow</button>
     </form>
 </div>
