--- a/views/partials/module/unFollowBtn.ejs
+++ b/views/partials/module/unFollowBtn.ejs
@@ -1,6 +1,6 @@
 <div class="follow-module">
     <form action="/unfollow" method="post" class="mb-0 ms-3">
         <input type="hidden" name="followId" value="<%=followId%>">
-        <button type="button" class="btn btn-primary btn-sm">Followed</button>
+        <button type="submit" class="btn btn-primary btn-sm">Followed</button>
     </form>
 </div>
