--- a/views/screens/user.ejs
+++ b/views/screens/user.ejs
@@ -42,10 +42,34 @@
     </div>
     <% } %>
 </div>
-<% if( posts.length){ %>
-<div class="user-posts">
-    <% for(var i=0; i < posts.length; i++) { %>
-    <%- include('../partials/module/postCard', {post: posts[i]}) %>
-    <% } %>
+
+<ul class="nav nav-tabs" id="userTab" role="tablist">
+    <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="posts-tab" data-bs-toggle="tab" data-bs-target="#posts" type="button"
+            role="tab" aria-controls="home" aria-selected="true">Posts</button>
+    </li>
+    <li class="nav-item" role="presentation">
+        <button class="nav-link" id="followings-tab" data-bs-toggle="tab" data-bs-target="#followings" type="button"
+            role="tab" aria-controls="followings" aria-selected="false">Followings</button>
+    </li>
+</ul>
+<div class="tab-content" id="userContent">
+    <div class="tab-pane fade show active" id="posts" role="tabpanel" aria-labelledby="posts-tab">
+        <% if( posts.length){ %>
+        <div class="user-posts mt-3">
+            <% for(var i=0; i < posts.length; i++) { %>
+            <%- include('../partials/module/postCard', {post: posts[i]}) %>
+            <% } %>
+        </div>
+        <% } %>
+    </div>
+    <div class="tab-pane fade" id="followings" role="tabpanel" aria-labelledby="followings-tab">
+        <% if( users.length){ %>
+        <div class="user-followings mt-3">
+            <% for(var i=0; i < users.length; i++) { %>
+            <%- include('../partials/module/userCard', { user: users[i] }) %>
+            <% } %>
+        </div>
+        <% } %>
+    </div>
 </div>
-<% } %>
