--- a/views/screens/following.ejs
+++ b/views/screens/following.ejs
@@ -1,4 +1,4 @@
 <%- include('../partials/module/pageHead', {title: 'Followings'}) %>
-<% for(var i=0; i < posts.length; i++) { %>
-<%- include('../partials/module/postCard', { post: posts[i] }) %>
+<% for(var i=0; i < followings.length; i++) { %>
+<%- include('../partials/module/postCard', { post: followings[i] }) %>
 <% } %>
