--- a/views/partials/module/login.ejs
+++ b/views/partials/module/login.ejs
@@ -7,11 +7,12 @@
         <form method="post" action="/login">
             <div class="mb-3">
                 <label for="login-email" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="login-email" aria-describedby="emailHelp" name="email">
+                <input type="email" class="form-control" id="login-email" aria-describedby="emailHelp" name="email"
+                    required>
             </div>
             <div class="mb-3">
                 <label for="login-password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="login-password" name="password">
+                <input type="password" class="form-control" id="login-password" name="password" required minlength="6">
             </div>
             <div class="d-flex align-items-center justify-content-end">
                 <button type="submit" class="btn btn-primary">Login</button>
