--- a/views/partials/module/error.ejs
+++ b/views/partials/module/error.ejs
@@ -1,3 +1,3 @@
-<div class="alert alert-danger" role="alert">
+<div class="alert alert-danger" role="alert" id="<%=message%>">
     <%=errors[message]%>
 </div>
