create lost password logic

--- a/views/screens/lostPassword.ejs
+++ b/views/screens/lostPassword.ejs
@@ -1,11 +1,22 @@
 <%- include('../partials/module/pageHead', {title: 'Lost my password'}) %>
-<form action="/lostPassword">
+<% if(message.length && messageType === "LOST_PASSWORD"){ %>
+<%- include('../partials/module/success', {message}) %>
+<%}%>
+    <% if(error.length && messageType === "LOST_PASSWORD"){ %>
+<%- include('../partials/module/error', {message: error}) %>
+<%}%>
+<form action="/lostPassword" method="post">
     <div class="mb-3">
         <label for="lost-password-email" class="form-label">Add your email address where we can send the confirmation
             code.</label>
-        <input type="email" class="form-control" id="lost-password-email" placeholder="name@example.com">
+        <input type="email" class="form-control" id="lost-password-email" placeholder="name@example.com" required name="email">
     </div>
     <div class="d-flex align-items-center justify-content-end">
         <button type="submit" class="btn btn-primary">Send</button>
     </div>
 </form>
+<% if(pwdToken) {%>
+<script>
+    console.log(`Your url to set new password is: http://localhost:3000/new-password/<%=pwdToken%>`);
+</script>
+<%}%>
